--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "@notores/core": "notores/core",
     "@notores/theme": "notores/theme",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
     "client-sessions": "^0.8.0",
-    "mongoose": "^5.5.8"
+    "lodash-es": "^4.17.11",
+    "mongoose": "^5.5.8",
+    "redux": "^4.0.1"
   },
   "notores": {
     "modules": [
@@ -34,6 +37,10 @@
       {
         "name": "notores-demo",
         "absolutePath": ":root/app/notores-demo"
+      },
+      {
+        "name": "static-serve-modules",
+        "absolutePath": ":root/app/static-serve-modules"
       }
     ]
   },
